All assignments complete

--- a/assignment4/GRass4_2016.tex
+++ b/assignment4/GRass4_2016.tex
@@ -100,7 +100,7 @@
 \pagenumbering{arabic}
 \rfoot{\textsc{Braden Moore, 587623}}
 \lfoot{\textsc{\today}}
-\rhead{\textsc{General Relativity: Assignment 3}}
+\rhead{\textsc{General Relativity: Assignment 4}}
 \setcounter{page}{1}
 \setcounter{section}{3}
 \section{Detecting gravitational waves with lasers}
@@ -347,7 +347,7 @@ to first order in $h_+$, as required!
 
 
 \begin{framed}
-\textbf{iii.} In flat space, equation~(\ref{eq9})) reduces to $\hat{D}A^\mu$ in the electromagnetic Lorenz gauge, where $\hat{D}=\eta^{\alpha\beta}\partial_{\alpha}\partial_{\beta}$ symbolises the d'Alembertian (wave) operator. In the curved space of the gravitational wave, show that~(\ref{eq9}) reduces to
+\textbf{iii.} In flat space, equation~(\ref{eq9}) reduces to $\hat{D}A^\mu$ in the electromagnetic Lorenz gauge, where $\hat{D}=\eta^{\alpha\beta}\partial_{\alpha}\partial_{\beta}$ symbolises the d'Alembertian (wave) operator. In the curved space of the gravitational wave, show that~(\ref{eq9}) reduces to
 \begin{equation}
 \hat{D}A^{\mu}=-h^{\mu\alpha}_{\ph{\mu\alpha},\nu}F_{\alpha}^{\ph{\alpha}\nu}-h^{\nu\alpha}_{\ph{\nu\alpha},\nu}
 F^{\mu}_{\ph{\mu}\alpha}+h^{\mu\alpha} F_{\alpha\nu}^{\ph{\alpha\nu},\nu}+h^{\nu\alpha} F^{\mu}_{\ph{\mu}\alpha,\nu}\label{eq11}
